test getall gear route
